--- a/vacancies/locale/de/LC_MESSAGES/django.po
+++ b/vacancies/locale/de/LC_MESSAGES/django.po
@@ -7,19 +7,34 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-27 00:49+0100\n"
-"PO-Revision-Date: 2019-11-27 00:57+0100\n"
+"POT-Creation-Date: 2019-11-27 01:53+0100\n"
+"PO-Revision-Date: 2019-11-27 01:53+0100\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.2.4\n"
+
+msgid "Qualifications & Requirements"
+msgstr "Qualifikationen & Voraussetzungen"
 
 msgid "Conditions"
 msgstr "Konditionen"
+
+msgid "Working hours"
+msgstr "Arbeitszeiten"
+
+msgid "Meta data"
+msgstr "Metadaten"
+
+msgid "Alternative representations"
+msgstr "Alternative Darstellungen"
+
+msgid "Image preview"
+msgstr "Bildvorschau"
 
 msgid "Vacancies Config"
 msgstr "Stellenangebotekonfiguration"
@@ -60,6 +75,9 @@ msgstr "Ansprechpartner"
 msgid "Contact persons"
 msgstr "Ansprechpartner"
 
+msgid "Full name"
+msgstr "Vollständiger Name"
+
 msgid "No management responsibility"
 msgstr "Keine Führungsverantwortung"
 
@@ -87,6 +105,9 @@ msgstr "Mit Berufserfahrung"
 msgid "Additional working hours information"
 msgstr "Weitere Informationen zur Arbeitszeit"
 
+msgid "Available positions"
+msgstr "Verfügbare Positionen"
+
 msgid "Box Number"
 msgstr "Chiffrenummer"
 
@@ -99,9 +120,6 @@ msgstr "Vergütung"
 msgid "Contact Person"
 msgstr "Ansprechpartner"
 
-msgid "Count"
-msgstr "Anzahl"
-
 msgid "Description"
 msgstr "Beschreibung"
 
@@ -110,6 +128,9 @@ msgstr "Frühester Beginn"
 
 msgid "Hours per week"
 msgstr "Wochenstunden"
+
+msgid "Is public"
+msgstr "Ist Öffentlich"
 
 msgid "Latest start"
 msgstr "Spätester Beginn"
@@ -123,11 +144,14 @@ msgstr "Führungsverantwortung"
 msgid "Marginal employment"
 msgstr "Geringfügige Beschäftigung (Mini Job)"
 
+msgid "km/miles"
+msgstr "km/Meilen"
+
 msgid "Max Distance"
 msgstr "Maximale Entfernung"
 
-msgid "Pdf"
-msgstr "Pdf"
+msgid "Pdf version"
+msgstr "PDF Version"
 
 msgid "Social insurance employment"
 msgstr "Sozialversicherungspflichtige Beschäftigung"
@@ -182,3 +206,9 @@ msgstr "Stellenangebot"
 
 msgid "Vacancies"
 msgstr "Stellenangebote"
+
+#~ msgid "Count"
+#~ msgstr "Anzahl"
+
+#~ msgid "Pdf"
+#~ msgstr "Pdf"
