--- a/vacancies/locale/de/LC_MESSAGES/django.po
+++ b/vacancies/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-27 03:34+0100\n"
-"PO-Revision-Date: 2019-11-27 03:34+0100\n"
+"POT-Creation-Date: 2019-11-27 03:55+0100\n"
+"PO-Revision-Date: 2019-11-27 03:55+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -248,3 +248,6 @@ msgstr "Stellenangebotdetails"
 
 msgid "Public Vacancies"
 msgstr "Öffentliche Stellenangebote"
+
+msgid "Currently there are no public vacancies available"
+msgstr "Derzeit sind keine öffentlichen Stellen verfügbar"
